[package]
name = "morioka-api"
version = "0.1.0"
authors = ["haruka.moe"]
edition = "2021"

[dependencies]
morioka-service = {path = "../service"}
actix-files = "0.6.2"
actix-http = "3.4.0"
actix-rt = "2.9"
actix-service = "2.0.2"
actix-web = "4.4.0"
tera = "1.19.0"
dotenvy = "0.15"
listenfd = "1.0.1"
serde = "1.0.188"
serde_json = "1.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.36.0", features = ["full"] }
rust-crypto = "0.2"
hex = { version = "0.4.3", features = [] }
rand = "0.9.0-alpha.0"
redis = "0.23.0"