[package]
name = "morioka-api"
version = "0.1.1"
authors = ["haruka.moe"]
edition = "2021"

[dependencies]
morioka-service = { path = "../service" }
actix-files = { version = "0.6.2" }
actix-http = { version = "3.4.0" }
actix-rt = { version = "2.9" }
actix-service = { version = "2.0.2" }
actix-web = { version = "4.4.0" }
tera = { version = "1.19.0" }
dotenvy = { version = "0.15" }
listenfd = { version = "1.0.1" }
serde = { version = "1.0.188" }
serde_json = { version = "1.0" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.36.0", features = ["full"] }
rust-crypto = "0.2"
hex = { version = "0.4.3" }
rand = { version = "0.9.0-alpha.0" }
r2d2_redis2 = { version = "0.23.3" }
redis = { version = "0.25.2", features = ["tokio-comp", "json","r2d2"] }
uuid = { version = "1.8.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full","test-util"] }